added ffmpeg to play audio in the notebook

--- a/xtts_streaming.ipynb
+++ b/xtts_streaming.ipynb
@@ -31,6 +31,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Basic streming inferance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -1974,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2517,7 +2524,7 @@
        "          [-4.5230e-02]]], device='cuda:0'))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2525,13 +2532,13 @@
    "source": [
     "\n",
     "print(\"Computing speaker latents...\")\n",
-    "gpt_cond_latent, speaker_embedding = model.get_conditioning_latents(audio_path=[\"latent_GSH.wav\"])\n",
+    "gpt_cond_latent, speaker_embedding = model.get_conditioning_latents(audio_path=[\"latent.wav\"])\n",
     "gpt_cond_latent, speaker_embedding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2547,9 +2554,58 @@
     "t0 = time.time()\n",
     "chunks = model.inference_stream(\n",
     "        \"\"\"\n",
-    "The revolution will not be right back after a message about a white tornado white lightning or white people,\n",
-    "The revolution will not go better with Coke,\n",
-    "The revolution will be no re-run brothers,\n",
+    "ou will not be able to stay home, brother\n",
+    "You will not be able to plug in, turn on and cop out\n",
+    "You will not be able to lose yourself on skag and skip out for beer during commercials, because\n",
+    "The revolution will not be televised\n",
+    "\n",
+    "The revolution will not be televised\n",
+    "The revolution will not be brought to you by Xerox in four parts without commercial interruptions\n",
+    "The revolution will not show you pictures of Nixon blowing a bugle\n",
+    "And leading a charge by John Mitchell, General Abrams, and Spiro Agnew\n",
+    "To eat hog maws confiscated from a Harlem sanctuary\n",
+    "The revolution will not be televised\n",
+    "\n",
+    "The revolution will not be brought to you by the Schaefer Award Theatre\n",
+    "And will not star Natalie Woods and Steve McQueen or Bullwinkle and Julia\n",
+    "The revolution will not give your mouth sex appeal\n",
+    "The revolution will not get rid of the nubs\n",
+    "The revolution will not make you look five pounds thinner, because\n",
+    "The revolution will not be televised, brother\n",
+    "\n",
+    "There will be no pictures of you and Willie Mays pushing that shopping cart down the block on the dead run\n",
+    "Or trying to slide that color television into a stolen ambulance\n",
+    "NBC will not be able predict the winner at 8:32 on report from 29 districts\n",
+    "The revolution will not be televised\n",
+    "\n",
+    "There will be no pictures of pigs shooting down brothers on the instant replay\n",
+    "There will be no pictures of pigs shooting down brothers on the instant replay\n",
+    "There will be no pictures of Whitney Young being run out of Harlem on a rail with a brand new process\n",
+    "There will be no slow motion or still lifes of Roy Wilkins\n",
+    "Strolling through Watts in a red, black, and green liberation jumpsuit that he has been saving for just the proper occasion\n",
+    "\n",
+    "Green Acres, Beverly Hillbillies, and Hooterville Junction will no longer be so damn relevant\n",
+    "And women will not care if Dick finally got down with\n",
+    "Jane on Search for Tomorrow\n",
+    "Because Black people will be in the street looking for a brighter day\n",
+    "The revolution will not be televised\n",
+    "\n",
+    "There will be no highlights on the eleven o'clock news and no pictures of hairy armed women liberationists and Jackie Onassis blowing her nose\n",
+    "The theme song will not be written by Jim Webb or Francis Scott Keys\n",
+    "Nor sung by Glen Campbell, Tom Jones, Johnny Cash, Engelbert Humperdinck, or The Rare Earth\n",
+    "The revolution will not be televised\n",
+    "\n",
+    "The revolution will not be right back after a message about a white tornado, white lightning, or white people\n",
+    "You will not have to worry about a dove in your bedroom, the tiger in your tank, or the giant in your toilet bowl\n",
+    "The revolution will not go better with Coke\n",
+    "The revolution will not fight germs that may cause bad breath\n",
+    "The revolution will put you in the driver's seat\n",
+    "\n",
+    "The revolution will not be televised\n",
+    "Will not be televised\n",
+    "Will not be televised\n",
+    "Will not be televised\n",
+    "The revolution will be no re-run, brothers\n",
     "The revolution will be live\"\"\",\n",
     "    \"en\",\n",
     "    gpt_cond_latent,\n",
@@ -2559,53 +2615,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #iterate over the tensor chunks\n",
-    "# for chunk in chunks:\n",
-    "#     print(chunk)\n",
-    "#     print(chunk.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jack/.pyenv/versions/ttsengine/lib/python3.10/site-packages/TTS/tts/layers/xtts/stream_generator.py:138: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use a generation configuration file (see https://huggingface.co/docs/transformers/main_classes/text_generation)\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time to first chunck: 1.0819876194000244\n",
-      "Received chunk 0 of audio length 21248\n",
-      "Received chunk 1 of audio length 22272\n",
-      "Received chunk 2 of audio length 22272\n",
-      "Received chunk 3 of audio length 22272\n",
-      "Received chunk 4 of audio length 22272\n",
-      "Received chunk 5 of audio length 22272\n",
-      "Received chunk 6 of audio length 22272\n",
-      "Received chunk 7 of audio length 22272\n",
-      "Received chunk 8 of audio length 22272\n",
-      "Received chunk 9 of audio length 22272\n",
-      "Received chunk 10 of audio length 22272\n",
-      "Received chunk 11 of audio length 22272\n",
-      "Received chunk 12 of audio length 22272\n",
-      "Received chunk 13 of audio length 22528\n",
-      "Received chunk 14 of audio length 22272\n",
-      "Received chunk 15 of audio length 22272\n",
-      "Received chunk 16 of audio length 22272\n",
-      "Received chunk 17 of audio length 22272\n",
-      "Received chunk 18 of audio length 1024\n"
+     "ename": "TypeError",
+     "evalue": "Xtts.inference_stream() missing 2 required positional arguments: 'gpt_cond_latent' and 'speaker_embedding'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m wav_chuncks \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      2\u001b[0m i\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m chunk \u001b[38;5;129;01min\u001b[39;00m chunks:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m      5\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTime to first chunck: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtime\u001b[38;5;241m.\u001b[39mtime()\u001b[38;5;250m \u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;250m \u001b[39mt0\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/.pyenv/versions/ttsengine/lib/python3.10/site-packages/torch/utils/_contextlib.py:26\u001b[0m, in \u001b[0;36m_wrap_generator.<locals>.generator_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(func)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgenerator_context\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m---> 26\u001b[0m     gen \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;66;03m# Generators are suspended and unsuspended at `yield`, hence we\u001b[39;00m\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;66;03m# make sure the grad mode is properly set every time the execution\u001b[39;00m\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;66;03m# flow returns into the wrapped generator and restored when it\u001b[39;00m\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;66;03m# returns through our `yield` to our caller (see PR #49017).\u001b[39;00m\n\u001b[1;32m     32\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     33\u001b[0m         \u001b[38;5;66;03m# Issuing `None` to a generator fires it up\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Xtts.inference_stream() missing 2 required positional arguments: 'gpt_cond_latent' and 'speaker_embedding'"
      ]
     }
    ],
@@ -2618,9 +2640,7 @@
     "        print(f\"Time to first chunck: {time.time() - t0}\")\n",
     "    print(f\"Received chunk {i} of audio length {chunk.shape[-1]}\")\n",
     "    wav_chuncks.append(chunk)\n",
-    "    i+=1\n",
-    "#wav = torch.cat(wav_chuncks, dim=0)\n",
-    "#torchaudio.save(\"xtts_streaming.wav\", wav.squeeze().unsqueeze(0).cpu(), 24000)\n"
+    "    i+=1\n"
    ]
   },
   {
@@ -2687,6 +2707,16 @@
     "wav = torch.cat(wav_chuncks, dim=0)\n",
     "torchaudio.save(\"xtts_streaming.wav\", wav.squeeze().unsqueeze(0).cpu(), 24000)\n",
     "print(f\"Time to completion: {time.time() - t0}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# play the audio\n",
+    "torchaudio.play(wav.squeeze().cpu(), 24000)"
    ]
   }
  ],
