with large files

--- a/xtts_streaming.ipynb
+++ b/xtts_streaming.ipynb
@@ -9,32 +9,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jack/.pyenv/versions/ttsengine/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "#autoreload\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
     "import torch\n",
     "import torchaudio\n",
     "from TTS.tts.configs.xtts_config import XttsConfig\n",
-    "from TTS.tts.models.xtts import Xtts"
+    "from TTS.tts.models.xtts import Xtts\n",
+    "import ffmpeg\n",
+    "import subprocess"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic streming inferance"
+    "# Objectives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Stream text into a WAV file [ ]\n",
+    "2. Stream text and play as streamed\n",
+    "3. Stream longer text\n",
+    "4. Stream streamed text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"\"\"You will not be able to stay home, brother\n",
+    "You will not be able to plug in, turn on and cop out\n",
+    "You will not be able to lose yourself on skag and skip out for beer during commercials, because\n",
+    "The revolution will not be televised\n",
+    "\n",
+    "The revolution will not be televised\n",
+    "The revolution will not be brought to you by Xerox in four parts without commercial interruptions\n",
+    "The revolution will not show you pictures of Nixon blowing a bugle\n",
+    "And leading a charge by John Mitchell, General Abrams, and Spiro Agnew\n",
+    "To eat hog maws confiscated from a Harlem sanctuary\n",
+    "The revolution will not be televised\n",
+    "\n",
+    "The revolution will not be brought to you by the Schaefer Award Theatre\n",
+    "And will not star Natalie Woods and Steve McQueen or Bullwinkle and Julia\n",
+    "The revolution will not give your mouth sex appeal\n",
+    "The revolution will not get rid of the nubs\n",
+    "The revolution will not make you look five pounds thinner, because\n",
+    "The revolution will not be televised, brother\n",
+    "\n",
+    "There will be no pictures of you and Willie Mays pushing that shopping cart down the block on the dead run\n",
+    "Or trying to slide that color television into a stolen ambulance\n",
+    "NBC will not be able predict the winner at 8:32 on report from 29 districts\n",
+    "The revolution will not be televised\n",
+    "\n",
+    "There will be no pictures of pigs shooting down brothers on the instant replay\n",
+    "There will be no pictures of pigs shooting down brothers on the instant replay\n",
+    "There will be no pictures of Whitney Young being run out of Harlem on a rail with a brand new process\n",
+    "There will be no slow motion or still lifes of Roy Wilkins\n",
+    "Strolling through Watts in a red, black, and green liberation jumpsuit that he has been saving for just the proper occasion\n",
+    "\n",
+    "Green Acres, Beverly Hillbillies, and Hooterville Junction will no longer be so damn relevant\n",
+    "And women will not care if Dick finally got down with\n",
+    "Jane on Search for Tomorrow\n",
+    "Because Black people will be in the street looking for a brighter day\n",
+    "The revolution will not be televised\n",
+    "\n",
+    "There will be no highlights on the eleven o'clock news and no pictures of hairy armed women liberationists and Jackie Onassis blowing her nose\n",
+    "The theme song will not be written by Jim Webb or Francis Scott Keys\n",
+    "Nor sung by Glen Campbell, Tom Jones, Johnny Cash, Engelbert Humperdinck, or The Rare Earth\n",
+    "The revolution will not be televised\n",
+    "\n",
+    "The revolution will not be right back after a message about a white tornado, white lightning, or white people\n",
+    "You will not have to worry about a dove in your bedroom, the tiger in your tank, or the giant in your toilet bowl\n",
+    "The revolution will not go better with Coke\n",
+    "The revolution will not fight germs that may cause bad breath\n",
+    "The revolution will put you in the driver's seat\n",
+    "\n",
+    "The revolution will not be televised\n",
+    "Will not be televised\n",
+    "Will not be televised\n",
+    "Will not be televised\n",
+    "The revolution will be no re-run, brothers\n",
+    "The revolution will be live\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Basic streaming inferance"
    ]
   },
   {
@@ -2538,7 +2621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2553,60 +2636,7 @@
     "print(\"Inference...\")\n",
     "t0 = time.time()\n",
     "chunks = model.inference_stream(\n",
-    "        \"\"\"\n",
-    "ou will not be able to stay home, brother\n",
-    "You will not be able to plug in, turn on and cop out\n",
-    "You will not be able to lose yourself on skag and skip out for beer during commercials, because\n",
-    "The revolution will not be televised\n",
-    "\n",
-    "The revolution will not be televised\n",
-    "The revolution will not be brought to you by Xerox in four parts without commercial interruptions\n",
-    "The revolution will not show you pictures of Nixon blowing a bugle\n",
-    "And leading a charge by John Mitchell, General Abrams, and Spiro Agnew\n",
-    "To eat hog maws confiscated from a Harlem sanctuary\n",
-    "The revolution will not be televised\n",
-    "\n",
-    "The revolution will not be brought to you by the Schaefer Award Theatre\n",
-    "And will not star Natalie Woods and Steve McQueen or Bullwinkle and Julia\n",
-    "The revolution will not give your mouth sex appeal\n",
-    "The revolution will not get rid of the nubs\n",
-    "The revolution will not make you look five pounds thinner, because\n",
-    "The revolution will not be televised, brother\n",
-    "\n",
-    "There will be no pictures of you and Willie Mays pushing that shopping cart down the block on the dead run\n",
-    "Or trying to slide that color television into a stolen ambulance\n",
-    "NBC will not be able predict the winner at 8:32 on report from 29 districts\n",
-    "The revolution will not be televised\n",
-    "\n",
-    "There will be no pictures of pigs shooting down brothers on the instant replay\n",
-    "There will be no pictures of pigs shooting down brothers on the instant replay\n",
-    "There will be no pictures of Whitney Young being run out of Harlem on a rail with a brand new process\n",
-    "There will be no slow motion or still lifes of Roy Wilkins\n",
-    "Strolling through Watts in a red, black, and green liberation jumpsuit that he has been saving for just the proper occasion\n",
-    "\n",
-    "Green Acres, Beverly Hillbillies, and Hooterville Junction will no longer be so damn relevant\n",
-    "And women will not care if Dick finally got down with\n",
-    "Jane on Search for Tomorrow\n",
-    "Because Black people will be in the street looking for a brighter day\n",
-    "The revolution will not be televised\n",
-    "\n",
-    "There will be no highlights on the eleven o'clock news and no pictures of hairy armed women liberationists and Jackie Onassis blowing her nose\n",
-    "The theme song will not be written by Jim Webb or Francis Scott Keys\n",
-    "Nor sung by Glen Campbell, Tom Jones, Johnny Cash, Engelbert Humperdinck, or The Rare Earth\n",
-    "The revolution will not be televised\n",
-    "\n",
-    "The revolution will not be right back after a message about a white tornado, white lightning, or white people\n",
-    "You will not have to worry about a dove in your bedroom, the tiger in your tank, or the giant in your toilet bowl\n",
-    "The revolution will not go better with Coke\n",
-    "The revolution will not fight germs that may cause bad breath\n",
-    "The revolution will put you in the driver's seat\n",
-    "\n",
-    "The revolution will not be televised\n",
-    "Will not be televised\n",
-    "Will not be televised\n",
-    "Will not be televised\n",
-    "The revolution will be no re-run, brothers\n",
-    "The revolution will be live\"\"\",\n",
+    "        \"\"\"You will not be able to stay home, brother. You will not be able to plug in, turn on and cop out. You will not be able to lose yourself on skag and skip out for beer during commercials, because, the revolution will not be televised.\"\"\",\n",
     "    \"en\",\n",
     "    gpt_cond_latent,\n",
     "    speaker_embedding\n",
@@ -2615,19 +2645,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Xtts.inference_stream() missing 2 required positional arguments: 'gpt_cond_latent' and 'speaker_embedding'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m wav_chuncks \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      2\u001b[0m i\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m chunk \u001b[38;5;129;01min\u001b[39;00m chunks:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m      5\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTime to first chunck: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtime\u001b[38;5;241m.\u001b[39mtime()\u001b[38;5;250m \u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;250m \u001b[39mt0\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/.pyenv/versions/ttsengine/lib/python3.10/site-packages/torch/utils/_contextlib.py:26\u001b[0m, in \u001b[0;36m_wrap_generator.<locals>.generator_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(func)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgenerator_context\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m---> 26\u001b[0m     gen \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;66;03m# Generators are suspended and unsuspended at `yield`, hence we\u001b[39;00m\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;66;03m# make sure the grad mode is properly set every time the execution\u001b[39;00m\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;66;03m# flow returns into the wrapped generator and restored when it\u001b[39;00m\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;66;03m# returns through our `yield` to our caller (see PR #49017).\u001b[39;00m\n\u001b[1;32m     32\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     33\u001b[0m         \u001b[38;5;66;03m# Issuing `None` to a generator fires it up\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Xtts.inference_stream() missing 2 required positional arguments: 'gpt_cond_latent' and 'speaker_embedding'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to first chunck: 3.374634027481079\n",
+      "Received chunk 0 of audio length 21248\n",
+      "Received chunk 1 of audio length 22272\n",
+      "Received chunk 2 of audio length 22272\n",
+      "Received chunk 3 of audio length 22272\n",
+      "Received chunk 4 of audio length 22272\n",
+      "Received chunk 5 of audio length 22272\n",
+      "Received chunk 6 of audio length 22272\n",
+      "Received chunk 7 of audio length 22272\n",
+      "Received chunk 8 of audio length 22272\n",
+      "Received chunk 9 of audio length 22272\n",
+      "Received chunk 10 of audio length 22272\n",
+      "Received chunk 11 of audio length 22272\n",
+      "Received chunk 12 of audio length 22272\n",
+      "Received chunk 13 of audio length 22528\n",
+      "Received chunk 14 of audio length 22272\n",
+      "Received chunk 15 of audio length 22272\n",
+      "Received chunk 16 of audio length 22272\n",
+      "Received chunk 17 of audio length 18944\n"
      ]
     }
    ],
@@ -2645,64 +2688,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[tensor([-0.0120, -0.0113, -0.0098,  ..., -0.0026, -0.0030, -0.0034],\n",
-       "        device='cuda:0'),\n",
-       " tensor([-0.0035, -0.0029, -0.0036,  ..., -0.0053, -0.0082, -0.0087],\n",
-       "        device='cuda:0'),\n",
-       " tensor([-0.0078, -0.0062, -0.0064,  ..., -0.1118, -0.0944, -0.0295],\n",
-       "        device='cuda:0'),\n",
-       " tensor([0.0945, 0.2392, 0.3596,  ..., 0.0071, 0.0099, 0.0118], device='cuda:0'),\n",
-       " tensor([ 0.0125,  0.0112,  0.0093,  ..., -0.0386,  0.1020,  0.1520],\n",
-       "        device='cuda:0'),\n",
-       " tensor([ 0.0352, -0.1059, -0.0701,  ..., -0.0028, -0.0022, -0.0028],\n",
-       "        device='cuda:0'),\n",
-       " tensor([-0.0041, -0.0065, -0.0079,  ...,  0.0327, -0.0348, -0.0940],\n",
-       "        device='cuda:0'),\n",
-       " tensor([-0.1189, -0.0987, -0.0556,  ..., -0.0009, -0.0009, -0.0009],\n",
-       "        device='cuda:0'),\n",
-       " tensor([-0.0005, -0.0003, -0.0006,  ..., -0.0265, -0.0606, -0.0648],\n",
-       "        device='cuda:0'),\n",
-       " tensor([-0.0621, -0.0763, -0.1066,  ...,  0.0533,  0.0691,  0.0870],\n",
-       "        device='cuda:0'),\n",
-       " tensor([0.1056, 0.1148, 0.1015,  ..., 0.0286, 0.0252, 0.0238], device='cuda:0'),\n",
-       " tensor([ 0.0228,  0.0150, -0.0027,  ...,  0.0083,  0.0061,  0.0024],\n",
-       "        device='cuda:0'),\n",
-       " tensor([-0.0005, -0.0024, -0.0045,  ...,  0.2670,  0.2521,  0.2266],\n",
-       "        device='cuda:0'),\n",
-       " tensor([ 0.1954,  0.1616,  0.1271,  ..., -0.3753, -0.4448, -0.5362],\n",
-       "        device='cuda:0'),\n",
-       " tensor([-0.6040, -0.6148, -0.5728,  ..., -0.1198, -0.1549, -0.1815],\n",
-       "        device='cuda:0'),\n",
-       " tensor([-0.1982, -0.2105, -0.2188,  ...,  0.0029,  0.0049,  0.0054],\n",
-       "        device='cuda:0'),\n",
-       " tensor([ 0.0043,  0.0023, -0.0011,  ...,  0.1295,  0.1322,  0.1355],\n",
-       "        device='cuda:0'),\n",
-       " tensor([ 1.4006e-01,  1.4445e-01,  1.4911e-01,  ..., -2.5956e-05,\n",
-       "         -2.4401e-05, -2.4039e-05], device='cuda:0'),\n",
-       " tensor([-2.4340e-05, -2.4481e-05, -2.4078e-05,  ..., -1.8584e-05,\n",
-       "         -1.8415e-05, -1.7362e-05], device='cuda:0')]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to completion: 25.875022888183594\n"
+     ]
     }
    ],
-   "source": [
-    "wav_chuncks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "wav = torch.cat(wav_chuncks, dim=0)\n",
     "torchaudio.save(\"xtts_streaming.wav\", wav.squeeze().unsqueeze(0).cpu(), 24000)\n",
@@ -2711,13 +2707,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ffplay version 4.4.2-0ubuntu0.22.04.1 Copyright (c) 2003-2021 the FFmpeg developers\n",
+      "  built with gcc 11 (Ubuntu 11.2.0-19ubuntu1)\n",
+      "  configuration: --prefix=/usr --extra-version=0ubuntu0.22.04.1 --toolchain=hardened --libdir=/usr/lib/x86_64-linux-gnu --incdir=/usr/include/x86_64-linux-gnu --arch=amd64 --enable-gpl --disable-stripping --enable-gnutls --enable-ladspa --enable-libaom --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --enable-libcdio --enable-libcodec2 --enable-libdav1d --enable-libflite --enable-libfontconfig --enable-libfreetype --enable-libfribidi --enable-libgme --enable-libgsm --enable-libjack --enable-libmp3lame --enable-libmysofa --enable-libopenjpeg --enable-libopenmpt --enable-libopus --enable-libpulse --enable-librabbitmq --enable-librubberband --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libspeex --enable-libsrt --enable-libssh --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvorbis --enable-libvpx --enable-libwebp --enable-libx265 --enable-libxml2 --enable-libxvid --enable-libzimg --enable-libzmq --enable-libzvbi --enable-lv2 --enable-omx --enable-openal --enable-opencl --enable-opengl --enable-sdl2 --enable-pocketsphinx --enable-librsvg --enable-libmfx --enable-libdc1394 --enable-libdrm --enable-libiec61883 --enable-chromaprint --enable-frei0r --enable-libx264 --enable-shared\n",
+      "  libavutil      56. 70.100 / 56. 70.100\n",
+      "  libavcodec     58.134.100 / 58.134.100\n",
+      "  libavformat    58. 76.100 / 58. 76.100\n",
+      "  libavdevice    58. 13.100 / 58. 13.100\n",
+      "  libavfilter     7.110.100 /  7.110.100\n",
+      "  libswscale      5.  9.100 /  5.  9.100\n",
+      "  libswresample   3.  9.100 /  3.  9.100\n",
+      "  libpostproc    55.  9.100 / 55.  9.100\n",
+      "Input #0, wav, from 'xtts_streaming.wav':=    0KB sq=    0B f=0/0   \n",
+      "  Metadata:\n",
+      "    encoder         : Lavf58.76.100\n",
+      "  Duration: 00:00:16.53, bitrate: 384 kb/s\n",
+      "  Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 24000 Hz, 1 channels, s16, 384 kb/s\n",
+      "  16.39 M-A:  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B f=0/0   \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  16.42 M-A:  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B f=0/0   \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['ffplay', '-nodisp', '-autoexit', 'xtts_streaming.wav'], returncode=0)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# play the audio\n",
+    "subprocess.run([\"ffplay\", \"-nodisp\", \"-autoexit\", \"xtts_streaming.wav\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# play the audio\n",
-    "torchaudio.play(wav.squeeze().cpu(), 24000)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
